--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                 </div>
             </header>
 
-            <p>Ever wondered how fast you can click? Whether you're a competitive gamer looking to gain an edge in Minecraft PvP, a Roblox enthusiast, or just someone curious about their clicking speed, the <strong><a href="https://autoclicker.io/cps-test/" target="_blank" style="color: var(--primary); text-decoration: none;">CPS Test</a></strong> is the perfect tool to measure your performance.</p>
+            <p>Ever wondered how fast you can click? Whether you're a competitive gamer looking to gain an edge in Minecraft PvP, a Roblox enthusiast, or just someone curious about their clicking speed, the <strong>CPS Test</strong> is the perfect tool to measure your performance.</p>
 
             <p>CPS, which stands for <strong>Clicks Per Second</strong>, has become an essential metric in the gaming world. From butterfly clicking to jitter clicking, gamers have developed various techniques to maximize their clicking speed and dominate in click-intensive games.</p>
 
@@ -167,15 +167,15 @@
 
             <h3>Why Do People Take CPS Tests?</h3>
             <ul class="bullet-list">
-                <li><strong>Gaming Performance:</strong> Higher CPS provides advantages in games like Minecraft, <a href="https://autoclicker.io/roblox/" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">Roblox</a>, and Cookie Clicker</li>
+                <li><strong>Gaming Performance:</strong> Higher CPS provides advantages in games like Minecraft, Roblox, and Cookie Clicker</li>
                 <li><strong>Competition:</strong> Gamers compete to achieve the highest CPS scores on leaderboards</li>
                 <li><strong>Skill Development:</strong> Tracking CPS helps measure improvement in clicking techniques</li>
                 <li><strong>Fun & Challenge:</strong> Many people enjoy testing their limits and beating personal records</li>
-                <li><strong>Mouse Testing:</strong> CPS tests help evaluate mouse switch responsiveness. Combine with <a href="https://ioauto.vercel.app/" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">IO Auto Clicker</a> to stress-test your hardware</li>
+                <li><strong>Mouse Testing:</strong> CPS tests help evaluate mouse switch responsiveness</li>
             </ul>
 
             <h2 id="how-to-test">How to Test Your CPS</h2>
-            <p>Testing your clicks per second is straightforward. Use our <a href="https://autoclicker.io/cps-test/" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">free CPS test tool</a> and follow these steps to get accurate results:</p>
+            <p>Testing your clicks per second is straightforward. Here's how to get accurate results:</p>
 
             <ol class="steps-list">
                 <li><strong>Choose Your Duration:</strong> Select a test duration. The 5-second test is most popular, while 10-second tests provide more accurate averages.</li>
@@ -262,7 +262,7 @@
             </div>
 
             <div class="info-box warning">
-                <p>⚠️ <strong>Warning:</strong> Advanced clicking techniques can cause strain with prolonged use. Take breaks and stop if you experience discomfort. For repetitive tasks, consider using an <a href="https://autoclicker.io/download/" target="_blank" style="color: var(--accent); text-decoration: none; font-weight: 500;">auto clicker</a> instead.</p>
+                <p>⚠️ <strong>Warning:</strong> Advanced clicking techniques can cause strain with prolonged use. Take breaks and stop if you experience discomfort.</p>
             </div>
 
             <h2 id="improve">How to Improve Your CPS</h2>
@@ -272,7 +272,7 @@
             <p>Like any skill, clicking speed improves with consistent practice. Spend 10-15 minutes daily on CPS tests.</p>
 
             <h3>2. Use the Right Equipment</h3>
-            <p>A quality gaming mouse with responsive switches makes a significant difference. You can also <a href="https://autoclicker.io/download/" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">download IO Auto Clicker</a> to practice clicking patterns without straining your fingers.</p>
+            <p>A quality gaming mouse with responsive switches makes a significant difference.</p>
 
             <h3>3. Optimize Your Grip</h3>
             <p>Experiment with different mouse grips (palm, claw, fingertip) to find what works best.</p>
@@ -294,13 +294,13 @@
             <p>Higher CPS means landing more hits on opponents. A player with 12 CPS has a significant advantage over someone clicking at 6 CPS.</p>
 
             <h3>Roblox Games</h3>
-            <p>Various <a href="https://autoclicker.io/roblox/" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">Roblox experiences</a> reward fast clicking, from combat games to clicking simulators.</p>
+            <p>Various Roblox experiences reward fast clicking, from combat games to clicking simulators.</p>
 
             <h3>Clicker & Idle Games</h3>
             <p>Games like Cookie Clicker are designed around clicking mechanics.</p>
 
             <div class="info-box tip">
-                <p>🎮 <strong>Gaming Tip:</strong> While high CPS helps, don't neglect other skills like aim, strategy, and game sense. For grinding or repetitive tasks, an <a href="https://autoclicker.io/" target="_blank" style="color: #c2410c; text-decoration: none; font-weight: 500;">auto clicker</a> can save your fingers!</p>
+                <p>🎮 <strong>Gaming Tip:</strong> While high CPS helps, don't neglect other skills like aim, strategy, and game sense.</p>
             </div>
 
             <h2 id="faq">Frequently Asked Questions</h2>
@@ -318,11 +318,11 @@
             <p>The 10-second test provides the best balance between accuracy and convenience.</p>
 
             <h3>Is using an auto clicker cheating?</h3>
-            <p>In competitive games, <a href="https://autoclicker.io/" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">auto clickers</a> are typically considered cheating and may result in bans. However, they're perfectly fine for single-player games and productivity tasks. <a href="https://ioauto.vercel.app/" target="_blank" style="color: var(--primary); text-decoration: none; font-weight: 500;">IO Auto Clicker</a> is a popular free option for legitimate uses.</p>
+            <p>In competitive games, auto clickers are typically considered cheating and may result in bans.</p>
 
             <div class="conclusion-box">
                 <h3>🎯 Start Testing Your CPS Today</h3>
-                <p>Whether you're training for competitive gaming or just curious about your clicking abilities, the <a href="https://autoclicker.io/cps-test/" target="_blank" style="color: #99f6e4; text-decoration: none; font-weight: 600;">CPS test</a> is a fun way to measure and improve your skills! Need to automate clicks? Try <a href="https://ioauto.vercel.app/" target="_blank" style="color: #99f6e4; text-decoration: none; font-weight: 600;">IO Auto Clicker</a> for free.</p>
+                <p>Whether you're training for competitive gaming or just curious about your clicking abilities, the CPS test is a fun way to measure and improve your skills!</p>
             </div>
         </article>
     </main>
